--- a/main.css
+++ b/main.css
@@ -1,25 +1,25 @@
 .bg1{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg1.jpg") no-repeat center center fixed;
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg1.jpg") no-repeat center center fixed;
     background-size: cover;    
 }
 
 .bg2{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg2.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg2.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
 .bg3{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg3.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg3.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
 .bg4{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg4.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg4.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
 .bg5{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg5.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg5.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
@@ -34,17 +34,17 @@
 }
 
 .bg8{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg8.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg8.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
 .bg9{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg9.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg9.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
 .bg10{
-    background: url("http://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg10.jpg") no-repeat center center fixed;    
+    background: url("https://res.cloudinary.com/johnnypark78/image/upload/v1488591353/bgs/bg10.jpg") no-repeat center center fixed;    
     background-size: cover; 
 }
 
